--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,17 +7,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/burger_style.css">
 </head>
 <body>
- <body>
-    <div class="container-fuild">
+    <div class="container-fluid">
         <div class="container">
             <h1> What would you like to go to the Hospital for today?</h1>
-            <img src="assets/img/burger.png" alt="burger" width="400px">
+            <img src="assets/img/burger.jpg" alt="burger" width="300px">
             {{{body}}}
         </div>
     </div>
-</body>
 </body>
 </html>
